Simple Hello World API

--- a/DevOpsSample.module/build.properties
+++ b/DevOpsSample.module/build.properties
@@ -6,4 +6,6 @@ bin.includes = .,\
                Resources/,\
                Schemas/,\
                Service Descriptors/,\
-               pom.xml
+               pom.xml,\
+               .WebResources/,\
+               target/
