--- a/DevOpsSample.module/build.properties
+++ b/DevOpsSample.module/build.properties
@@ -7,5 +7,4 @@ bin.includes = .,\
                Schemas/,\
                Service Descriptors/,\
                pom.xml,\
-               .WebResources/,\
-               target/
+               .WebResources/
