--- a/DevOpsSample.parent/pom.xml
+++ b/DevOpsSample.parent/pom.xml
@@ -10,4 +10,12 @@
     <module>../DevOpsSample.module</module>
     <module>../DevOpsSample</module>
   </modules>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.7.1</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
