--- a/DevOpsSample/pom.xml
+++ b/DevOpsSample/pom.xml
@@ -10,6 +10,13 @@
   </parent>
   <artifactId>DevOpsSample</artifactId>
   <packaging>bwear</packaging>
+  <properties>
+    <skipTests>true</skipTests>
+    <bw.Home></bw.Home>
+    <project.type>None</project.type>
+    <failIfNoTests>false</failIfNoTests>
+    <tibco.Home></tibco.Home>
+  </properties>
   <build>
     <plugins>
       <plugin>
@@ -21,4 +28,13 @@
       </plugin>
     </plugins>
   </build>
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>com.tibco.plugins</groupId>
+        <artifactId>bw6-maven-plugin</artifactId>
+        <version>2.1.0</version>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
