--- a/DevOpsSample/pom.xml
+++ b/DevOpsSample/pom.xml
@@ -12,8 +12,9 @@
   <packaging>bwear</packaging>
   <properties>
     <skipTests>true</skipTests>
+    <project.type>Docker</project.type>
     <bw.Home></bw.Home>
-    <project.type>None</project.type>
+    <docker.property.file>docker-dev.properties</docker.property.file>
     <failIfNoTests>false</failIfNoTests>
     <tibco.Home></tibco.Home>
   </properties>
@@ -25,6 +26,61 @@
         <version>2.1.0</version>
         <extensions>true</extensions>
         <configuration />
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>properties-maven-plugin</artifactId>
+        <version>1.0.0</version>
+        <executions>
+          <execution>
+            <phase>initialize</phase>
+            <goals>
+              <goal>read-project-properties</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <files>
+            <file>${docker.property.file}</file>
+          </files>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>io.fabric8</groupId>
+        <artifactId>docker-maven-plugin</artifactId>
+        <version>0.26.1</version>
+        <configuration>
+          <skip>false</skip>
+          <dockerHost>${bwdocker.host}</dockerHost>
+          <certPath>${bwdocker.certPath}</certPath>
+          <images>
+            <image>
+              <alias>${bwdocker.containername}</alias>
+              <name>${docker.image}</name>
+              <build>
+                <from>${bwdocker.from}</from>
+                <imagePullPolicy>${bwdocker.autoPullImage}</imagePullPolicy>
+                <maintainer>${bwdocker.maintainer}</maintainer>
+                <assembly>
+                  <basedir>/</basedir>
+                  <descriptorRef>artifact</descriptorRef>
+                </assembly>
+                <tags>
+                  <tag>latest</tag>
+                </tags>
+                <ports>
+                  <port>8585</port>
+                </ports>
+              </build>
+              <run>
+                <namingStrategy>alias</namingStrategy>
+                <ports>
+                  <port>${bwdocker.port.p0}</port>
+                </ports>
+              </run>
+            </image>
+          </images>
+        </configuration>
       </plugin>
     </plugins>
   </build>
