configure docker runtime

--- a/DevOpsSample/docker-dev.properties
+++ b/DevOpsSample/docker-dev.properties
@@ -2,9 +2,9 @@
 #Tue Dec 18 14:56:46 CST 2018
 bwdocker.certPath=
 docker.image=devops-sample
-bwdocker.port.p0=18080\:8080
+bwdocker.port.p0=18585\:8585
 bwdocker.autoPullImage=IfNotPresent
-bwdocker.host=unix\\\:///var/run/docker.sock
+bwdocker.host=unix\:///var/run/docker.sock
 bwdocker.maintainer=jhenley@tibco.com
 bwdocker.containername=devops-sample
 bwdocker.from=tibco/bwce\:latest
