--- a/DevOpsSample/docker-prod.properties
+++ b/DevOpsSample/docker-prod.properties
@@ -4,7 +4,7 @@ bwdocker.certPath=
 docker.image=devops-sample
 bwdocker.port.p0=18080\:8080
 bwdocker.autoPullImage=IfNotPresent
-bwdocker.host=unix\\\:///var/run/docker.sock
+bwdocker.host=unix\:///var/run/docker.sock
 bwdocker.maintainer=jhenley@tibco.com
 bwdocker.containername=devops-sample
 bwdocker.from=tibco/bwce\:latest
