--- a/DevOpsSample/docker-dev.properties
+++ b/DevOpsSample/docker-dev.properties
@@ -1,6 +1,6 @@
 #Docker host properties
 #Tue Dec 18 14:56:46 CST 2018
-bwdocker.certPath=
+bwdocker.certPath=/Users/jasonhenley/.docker
 docker.image=devops-sample
 bwdocker.port.p0=18585\:8585
 bwdocker.autoPullImage=IfNotPresent
