Update Base Image

--- a/DevOpsSample/docker-prod.properties
+++ b/DevOpsSample/docker-prod.properties
@@ -1,10 +1,9 @@
 #Docker host properties
-#Tue Dec 18 14:56:46 CST 2018
-bwdocker.certPath=
+#Wed Dec 19 11:31:14 CST 2018
+bwdocker.certPath=/Users/jasonhenley/.docker
 docker.image=devops-sample
-bwdocker.port.p0=18080\:8080
 bwdocker.autoPullImage=IfNotPresent
 bwdocker.host=unix\:///var/run/docker.sock
 bwdocker.maintainer=jhenley@tibco.com
-bwdocker.containername=devops-sample
-bwdocker.from=tibco/bwce\:latest
+bwdocker.containername=
+bwdocker.from=jmhenley5326/tibco-bwce\:2.4.2
