Update Port Mapping

--- a/DevOpsSample/docker-dev.properties
+++ b/DevOpsSample/docker-dev.properties
@@ -1,9 +1,10 @@
 #Docker host properties
-#Wed Dec 19 11:31:14 CST 2018
+#Wed Dec 19 11:37:04 CST 2018
 bwdocker.certPath=/Users/jasonhenley/.docker
 docker.image=devops-sample
+bwdocker.port.p0=18585:8585
 bwdocker.autoPullImage=IfNotPresent
 bwdocker.host=unix\:///var/run/docker.sock
 bwdocker.maintainer=jhenley@tibco.com
-bwdocker.containername=
+bwdocker.containername=devops-sample
 bwdocker.from=jmhenley5326/tibco-bwce\:2.4.2
