--- a/DevOpsSample/pom.xml
+++ b/DevOpsSample/pom.xml
@@ -43,6 +43,7 @@
         <configuration>
           <files>
             <file>${docker.property.file}</file>
+            <file>${docker.env.property.file}</file>
           </files>
         </configuration>
       </plugin>
