--- a/DevOpsSample/pom.xml
+++ b/DevOpsSample/pom.xml
@@ -13,7 +13,7 @@
   <properties>
     <skipTests>true</skipTests>
     <bw.Home></bw.Home>
-    <docker.env.property.file>docker-host-env-dev.properties</docker.env.property.file>
+    <docker.env.property.file>./DevOpsSample/docker-host-env-dev.properties</docker.env.property.file>
     <project.type>Docker</project.type>
     <failIfNoTests>false</failIfNoTests>
     <docker.property.file>docker-dev.properties</docker.property.file>
@@ -43,7 +43,6 @@
         <configuration>
           <files>
             <file>${docker.property.file}</file>
-            <file>${docker.env.property.file}</file>
           </files>
         </configuration>
       </plugin>
