--- a/DevOpsSample/docker-host-env-dev.properties
+++ b/DevOpsSample/docker-host-env-dev.properties
@@ -1,3 +1,3 @@
 #Your Docker Host Environment Variables properties
 #Fri Aug 25 16:09:26 CDT 2019
-BW_APP_MONITORING_CONFIG="{\"url\"\:\"http\://54.208.182.159\:18080\"}"
+BW_APP_MONITORING_CONFIG={"url"\:"http\://54.208.182.159\:18080"}
